--- a/packages/github_api_repository/pubspec.yaml
+++ b/packages/github_api_repository/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^0.14.2
   graphql_flutter: ^5.0.0-nullsafety.2
   json_annotation: ^4.0.1
   rxdart: ^0.26.0
@@ -19,7 +19,7 @@ dev_dependencies:
   build_runner:
   flutter_test:
     sdk: flutter
-  freezed: ^0.14.1+2
+  freezed: ^0.14.2
   json_serializable: ^4.1.1
   very_good_analysis: ^2.0.3
 
