--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,22 +12,25 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   bloc: ^7.0.0
+  dartz: ^0.10.0-nullsafety.2
   envify: ^2.0.0
   flutter_bloc: ^7.0.0
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   github_api_repository:
-      path: ./packages/github_api_repository
+    path: ./packages/github_api_repository
   graphql_flutter: ^5.0.0-nullsafety.2
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   hive_repository:
-      path: ./packages/hive_repository
+    path: ./packages/hive_repository
   injectable: ^1.4.0
   intl: ^0.17.0
   json_annotation: ^4.0.1
+  jiffy: ^4.1.0
   pedantic: ^1.11.0
-
+  routemaster: ^0.7.2
+  rxdart: ^0.26.0
 
 dev_dependencies:
   build_runner:
@@ -35,7 +38,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   envify_generator: ^2.0.0
-  freezed: ^0.14.1+2
+  freezed: ^0.14.2
   injectable_generator: ^1.4.0
   json_serializable: ^4.1.1
   mocktail: ^0.1.0
