--- a/packages/github_api_repository/pubspec.yaml
+++ b/packages/github_api_repository/pubspec.yaml
@@ -2,6 +2,7 @@ name: github_api_repository
 description: A pacakge to handle the query to github graphQL API.
 version: 0.0.1
 homepage: https://github.com/arnaudelub
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,6 +13,8 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^0.14.2
   graphql_flutter: ^5.0.0-nullsafety.2
+  hive_repository:
+    path: ../hive_repository
   json_annotation: ^4.0.1
   rxdart: ^0.26.0
 
