--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,12 @@ dependencies:
   dartz: ^0.10.0-nullsafety.2
   envify: ^2.0.0
   flutter_bloc: ^7.0.0
+  flutter_markdown: ^0.6.2
   freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   github_api_repository:
     path: ./packages/github_api_repository
+  google_fonts: ^2.1.0
   graphql_flutter: ^5.0.0-nullsafety.2
   hive: ^2.0.4
   hive_flutter: ^1.0.0
