adding some unit tests

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,7 @@ analyzer:
   exclude:
     - 'lib/**.g.dart'
     - 'lib/**.freezed.dart'
+    - 'lib/injections.config.dart'
 linter:
   rules:
     public_member_api_docs: false
