--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   pedantic: ^1.11.0
   routemaster: ^0.7.2
   rxdart: ^0.26.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   build_runner:
@@ -43,7 +44,7 @@ dev_dependencies:
   freezed: ^0.14.2
   injectable_generator: ^1.4.0
   json_serializable: ^4.1.1
-  mocktail: ^0.1.0
+  mocktail: ^0.1.2
   very_good_analysis: ^2.0.3
 
 flutter:
