Adding firebase and updating gh workflow to generate google-services file from secrets

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutterissuesapp">
+    package="com.idelub.flutterissuesapp">
    <application
-        android:label="Flutterissuesapp"
+       android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
