--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,15 @@ jobs:
         env:
             SECRET_FILE: ${{ secrets.ENVS }}
         run: echo "$SECRET_FILE" | base64 --decode > .env
+
+      - name: flutter create .
+        run: flutter create .
+
+      - name: Create google-services.json file for android
+        env:
+            GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
+        run: echo "$GOOGLE_SERVICES" | base64 --decode > android/app/src/google-services.json
+
       #Inside package Helper_repository
       - name: Install dependencies
         working-directory: ./packages/helper_repository
