--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,10 +58,10 @@ android {
             }
         } else {
             release {
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-                storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-                storePassword keystoreProperties['storePassword']
+                keyAlias System.getenv("FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS")
+                keyPassword System.getenv("FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
+                storeFile file(System.getenv("HOME") + "/keystores/flutterissuesapp-key.keystore")
+                storePassword System.getenv("FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD")
             }
         }
     }
