adding github repo workflow and fixing build_runner missing for root lib

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -19,7 +19,7 @@ jobs:
         run: echo "$SECRET_FILE" | base64 --decode > .env
 
       #Inside package Helper_repository
-      - name: Install dependencies
+      - name: Install dependencies Helper Repository
         working-directory: ./packages/helper_repository
         run: flutter packages get
       - name: format
@@ -33,7 +33,7 @@ jobs:
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
 
       # Inside package Hive repository
-      - name: Install dependencies
+      - name: Install dependencies Hive Repository
         working-directory: ./packages/hive_repository
         run: flutter packages get
       - name: format
@@ -50,8 +50,29 @@ jobs:
         working-directory: ./packages/hive_repository
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
 
-      - name: Install Dependencies
+      # Inside package Github repository
+      - name: Install dependencies Github repository
+        working-directory: ./packages/github_api_repository
         run: flutter packages get
+      - name: format
+        working-directory: ./packages/hive_repository
+        run: flutter format --set-exit-if-changed lib test
+      - name: Run build_runner
+        working-directory: ./packages/github_api_repository
+        run: |
+            flutter pub run build_runner build --delete-conflicting-outputs
+      - name: Analyze
+        working-directory: ./packages/github_api_repository
+        run: flutter analyze lib test
+      - name: Run tests
+        working-directory: ./packages/github_api_repository
+        run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
+
+      - name: Install Dependencies root
+        run: flutter packages get
+      - name: Run build_runner
+        run: |
+            flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Format
         run: flutter format --set-exit-if-changed lib test
