--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,15 +22,7 @@ jobs:
             GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
         run: echo "$GOOGLE_SERVICES" | base64 --decode > android/app/google-services.json
 
-      - name: Adding keystore and envs
-        env:
-            KEYSTOREFILE: ${{ secrets.KEYSTORE }}
-            PRIVATE_KEY_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
-            KEYSTORE_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD }}
-            ALIAS: ${{ FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS }}
-        run: |
-            mkdir ~/keystores
-            echo "KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
+
       #Inside package Helper_repository
       - name: Install dependencies Helper Repository
         working-directory: ./packages/helper_repository
@@ -101,9 +93,25 @@ jobs:
         with:
           exclude: "lib/**.freezed.dart lib/**.g.dart"
           path: "./coverage/lcov.info"
-          min_coverage: 50
-      - name: Build the app
-        run: flutter build apk  --flavor production -t lib/main_production.dart
+          min_coverage: 20
+
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          exclude: "lib/**.freezed.dart lib/**.g.dart"
+          path: "./coverage/lcov.info"
+          min_coverage: 20
+
+      - name: Adding keystore and envs then build appbundle
+        env:
+            KEYSTOREFILE: ${{ secrets.KEYSTORE }}
+            FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD : ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
+            FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD }}
+            FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS }}
+        run: |
+            mkdir ~/keystores
+            echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
+            flutter build appbundle --flavor production -t lib/main_production.dart -v
 
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
