--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -109,6 +109,6 @@ jobs:
       - name: Run tests on Firebase Test Lab
         uses: asadmansr/Firebase-Test-Lab-Action@v1.0
         with:
-          arg-spec: 'testLab.yaml:android-pixel-4'
+          arg-spec: 'tests.yaml:android-pixel-4'
         env:
           SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
