--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -105,6 +105,7 @@ jobs:
             mkdir ~/keystores
             echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
             flutter build appbundle --flavor production -t lib/main_production.dart -v
+            flutter build appbundle --debug --flavor production -t lib/main_production.dart -v
 
       - name: Run tests on Firebase Test Lab
         uses: asadmansr/Firebase-Test-Lab-Action@v1.0
