--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -106,9 +106,10 @@ jobs:
             echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
             flutter build appbundle --flavor production -t lib/main_production.dart -v
 
-      - name: Run tests on Firebase Test Lab
-        uses: asadmansr/Firebase-Test-Lab-Action@v1.0
-        with:
-          arg-spec: 'tests.yaml:android-pixel-4'
-        env:
-          SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+     # ## To add when integration test implemented
+     # - name: Run tests on Firebase Test Lab
+     #   uses: asadmansr/Firebase-Test-Lab-Action@v1.0
+     #   with:
+     #     arg-spec: 'tests.yaml:android-pixel-4'
+     #   env:
+     #     SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
