Adding integration test basic for demonstration purposes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,7 @@ android {
         }
         staging {
             dimension "default"
-            applicationIdSuffix ".stg"
+            //applicationIdSuffix ".stg"
         }
         development {
             dimension "default"
