--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -106,10 +106,17 @@ jobs:
             echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
             flutter build appbundle --flavor production -t lib/main_production.dart -v
 
-     # ## To add when integration test implemented
-     # - name: Run tests on Firebase Test Lab
-     #   uses: asadmansr/Firebase-Test-Lab-Action@v1.0
-     #   with:
-     #     arg-spec: 'tests.yaml:android-pixel-4'
-     #   env:
-     #     SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+     # ## Add when stable channel support null safety test_driver
+      - name: Generating assembleAndroidTest and assembleDebug
+        run: |
+            pushd android
+            flutter build apk --flavor production -t lib/main_production.dart
+            gradle app:assembleAndroidTest
+            gradle app:assembleDebug -Ptarget=integration_test/app_test.dart
+            popd
+      - name: Run tests on Firebase Test Lab
+        uses: asadmansr/Firebase-Test-Lab-Action@v1.0
+        with:
+          arg-spec: 'tests.yaml:android-pixel-4'
+        env:
+          SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
