--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,9 +2,11 @@ include: package:very_good_analysis/analysis_options.yaml
 
 analyzer:
   exclude:
-    - 'lib/**.g.dart'
-    - 'lib/**.freezed.dart'
+    - '**.g.dart'
+    - '**.freezed.dart'
     - 'lib/injections.config.dart'
+    - 'lib/test_driver/integration_test.dart'
+
 linter:
   rules:
     public_member_api_docs: false
