--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -22,7 +22,8 @@ jobs:
             GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
         run: echo "$GOOGLE_SERVICES" | base64 --decode > android/app/google-services.json
 
-
+      - name: Switch to flutter channel bet
+        run: flutter channel beta
       #Inside package Helper_repository
       - name: Install dependencies Helper Repository
         working-directory: ./packages/helper_repository
