--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -105,6 +105,8 @@ jobs:
             FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD }}
             FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS }}
         run: |
+            mkdir ~/keystores
+            echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
             pushd android
             flutter build apk --flavor production -t lib/main_production.dart
             gradle app:assembleAndroidTest
