Removing upload to test lab in workflow

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -98,23 +98,24 @@ jobs:
 
 
      # ## Add when stable channel support null safety test_driver
-      - name: Generating assembleAndroidTest and assembleDebug
-        env:
-            KEYSTOREFILE: ${{ secrets.KEYSTORE }}
-            FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD : ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
-            FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD }}
-            FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS }}
-        run: |
-            mkdir ~/keystores
-            echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
-            pushd android
-            flutter build apk --flavor production -t lib/main_production.dart
-            gradle app:assembleAndroidTest
-            gradle app:assembleDebug -Ptarget=integration_test/app_test.dart
-            popd
-      - name: Run tests on Firebase Test Lab
-        uses: asadmansr/Firebase-Test-Lab-Action@v1.0
-        with:
-          arg-spec: 'tests.yaml:android-pixel-4'
-        env:
-          SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+     # ## Or use beta channel but assembleAndroidTest is failing
+     # - name: Generating assembleAndroidTest and assembleDebug
+     #   env:
+     #       KEYSTOREFILE: ${{ secrets.KEYSTORE }}
+     #       FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD : ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
+     #      FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_PASSWORD }}
+     #      FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS: ${{ secrets.FLUTTERISSUESAPP_ANDROID_KEYSTORE_ALIAS }}
+     #  run: |
+     #      mkdir ~/keystores
+     #      echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
+     #      pushd android
+     #      flutter build apk --flavor production -t lib/main_production.dart
+     #      gradle app:assembleAndroidTest
+     #      gradle app:assembleDebug -Ptarget=integration_test/app_test.dart
+     #      popd
+     #- name: Run tests on Firebase Test Lab
+     #  uses: asadmansr/Firebase-Test-Lab-Action@v1.0
+     #  with:
+     #    arg-spec: 'tests.yaml:android-pixel-4'
+     #  env:
+     #    SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT_KEY }}
