--- a/tests.yaml
+++ b/tests.yaml
@@ -1,8 +1,8 @@
 android-pixel-4:
   type: instrumentation
-  app: build/app/outputs/bundle/productionRelease/app-production-release.aab
+  app: build/app/outputs/flutter-apk/app-production-release.apk
   # TODO: Set the name of test apk file
-  test: build/app/outputs/apk/androidTest/debug/<file>.apk
+  test: build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk
   device:
     - model: flame
       version: 29
