--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -113,7 +113,7 @@ jobs:
         run: |
             mkdir ~/keystores
             echo "$KEYSTOREFILE" | base64 --decode > ~/keystores/flutterissuesapp-key.keystore
-            flutter build appbundle --flavor production -t lib/main_production.dart -v
+            flutter build apk --flavor production -t lib/main_production.dart -v
 
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
