--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,7 +75,7 @@ android {
         }
         staging {
             dimension "default"
-            //applicationIdSuffix ".stg"
+            applicationIdSuffix ".stg"
         }
         development {
             dimension "default"
